--- a/notebooks/neptune_logs_to_csv.ipynb
+++ b/notebooks/neptune_logs_to_csv.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "neptune.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -154,7 +155,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "1d39b279-9dd1-4d3f-94fe-8566991d83d6"
+        "outputId": "374b6a85-b13f-4014-d7ad-8307ac11ab19"
       },
       "source": [
         "experiments = project.get_experiments()\n",
@@ -166,14 +167,14 @@
         "counter = 1\n",
         "length = len(experiments)\n",
         "metrics_df = pd.DataFrame(columns=['id', *logs_names])\n",
-        "for experiment in experiments:\n",
+        "for experiment in experiments[::-1]:\n",
         "  print(f'{counter}/{length} - {experiment.id} \\r')\n",
         "  counter = counter + 1\n",
-        "  if experiment.state == 'succeeded' and experiments[46].get_logs()['dur']['lastX'] == 30.0:\n",
+        "  if experiment.state == 'succeeded' and experiment.get_parameters()['max_epochs'] and experiment.get_logs()['dur']['lastX'] == 30.0:\n",
         "    if int(experiment.id.split('-')[1]) < 114:\n",
         "      df = experiment.get_numeric_channels_values(*logs_names_deprecated)\n",
         "      df = df.rename(columns={'test_acc': 'valid_acc', 'test_f1': 'valid_f1', 'test_roc_auc': 'valid_roc_auc', 'test_precision': 'valid_precision', 'test_recall': 'valid_recall'})\n",
-        "      df.insert(loc=12, column='valid_loss', value=\"\")\n",
+        "      df.insert(loc=12, column='valid_loss', value=\"NA\")\n",
         "    else:\n",
         "      df = experiment.get_numeric_channels_values(*logs_names)\n",
         "\n",
@@ -187,21 +188,27 @@
         "    df.insert(loc=13, column='net_family', value=items[0])\n",
         "\n",
         "    # pretrained - boolean 0 oder 1 if pretrained\n",
-        "    pretrained = 0\n",
-        "    if \"pretrained\" in experiment.name.lower(): pretrained = 1\n",
+        "    pretrained = \"not pretrained\"\n",
+        "    if \"pretrained\" in experiment.name.lower(): pretrained = \"pretrained\"\n",
         "    df.insert(loc=14, column='pretrained', value=pretrained)\n",
         "\n",
         "    # normalized - boolean 0 oder 1 if normalized\n",
-        "    normalized = 0\n",
-        "    if \"normalized\" in experiment.name.lower(): normalized = 1\n",
+        "    normalized = \"not normalized\"\n",
+        "    if \"normalized\" in experiment.name.lower(): normalized = \"normalized\"\n",
         "    df.insert(loc=15, column='normalized', value=normalized)\n",
         "\n",
         "    # full_data - boolean 0 oder 1 if full data set used\n",
-        "    full_data = 1\n",
+        "    full_data = \"\"\n",
         "    if hasattr(experiment.get_logs(), 'test_name'):\n",
-        "      if \"small\" in experiment.get_logs()['test_name'].y: full_data = 0\n",
+        "      if \"small\" in experiment.get_logs()['test_name'].y:\n",
+        "        full_data = \"partial data\"\n",
+        "      else:\n",
+        "        full_data = \"full data\"\n",
         "    else:\n",
-        "      if \"small\" in experiment.name: full_data = 0\n",
+        "      if \"small\" in experiment.name.lower():\n",
+        "        full_data = \"partial data\"\n",
+        "      else:\n",
+        "        full_data = \"full data\"\n",
         "\n",
         "    df.insert(loc=16, column='full_data', value=full_data)\n",
         "\n",
@@ -211,113 +218,120 @@
         "metrics_df.to_csv (r'./neptune_logs.csv', index = False, header=True)\n",
         "print(\"done saving\")"
       ],
-      "execution_count": 104,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1/102 - HCDEX-17 \n",
-            "2/102 - HCDEX-18 \n",
-            "3/102 - HCDEX-19 \n",
-            "4/102 - HCDEX-20 \n",
-            "5/102 - HCDEX-21 \n",
-            "6/102 - HCDEX-22 \n",
-            "7/102 - HCDEX-24 \n",
-            "8/102 - HCDEX-53 \n",
-            "9/102 - HCDEX-54 \n",
-            "10/102 - HCDEX-60 \n",
-            "11/102 - HCDEX-61 \n",
-            "12/102 - HCDEX-66 \n",
-            "13/102 - HCDEX-68 \n",
-            "14/102 - HCDEX-69 \n",
-            "15/102 - HCDEX-70 \n",
-            "16/102 - HCDEX-71 \n",
-            "17/102 - HCDEX-72 \n",
-            "18/102 - HCDEX-73 \n",
-            "19/102 - HCDEX-74 \n",
-            "20/102 - HCDEX-75 \n",
-            "21/102 - HCDEX-77 \n",
-            "22/102 - HCDEX-78 \n",
-            "23/102 - HCDEX-79 \n",
-            "24/102 - HCDEX-80 \n",
-            "25/102 - HCDEX-81 \n",
-            "26/102 - HCDEX-84 \n",
-            "27/102 - HCDEX-85 \n",
-            "28/102 - HCDEX-87 \n",
-            "29/101 - HCDEX-89 \n",
-            "30/101 - HCDEX-90 \n",
-            "31/101 - HCDEX-91 \n",
-            "32/101 - HCDEX-92 \n",
-            "33/101 - HCDEX-94 \n",
-            "34/101 - HCDEX-96 \n",
-            "35/101 - HCDEX-97 \n",
-            "36/101 - HCDEX-98 \n",
-            "37/101 - HCDEX-99 \n",
-            "38/101 - HCDEX-100 \n",
-            "39/101 - HCDEX-101 \n",
-            "40/101 - HCDEX-102 \n",
-            "41/101 - HCDEX-103 \n",
-            "42/101 - HCDEX-104 \n",
-            "43/101 - HCDEX-105 \n",
-            "44/101 - HCDEX-106 \n",
-            "45/101 - HCDEX-107 \n",
-            "46/101 - HCDEX-108 \n",
-            "47/101 - HCDEX-109 \n",
-            "48/101 - HCDEX-110 \n",
-            "49/101 - HCDEX-111 \n",
-            "50/101 - HCDEX-112 \n",
-            "51/101 - HCDEX-113 \n",
-            "52/100 - HCDEX-125 \n",
-            "53/99 - HCDEX-127 \n",
-            "54/99 - HCDEX-128 \n",
-            "55/99 - HCDEX-129 \n",
-            "56/99 - HCDEX-130 \n",
-            "57/99 - HCDEX-131 \n",
-            "58/99 - HCDEX-132 \n",
-            "59/99 - HCDEX-133 \n",
-            "60/99 - HCDEX-134 \n",
-            "61/99 - HCDEX-135 \n",
-            "62/99 - HCDEX-136 \n",
-            "63/99 - HCDEX-137 \n",
-            "64/99 - HCDEX-138 \n",
-            "65/99 - HCDEX-139 \n",
-            "66/99 - HCDEX-140 \n",
-            "67/99 - HCDEX-141 \n",
-            "68/99 - HCDEX-142 \n",
-            "69/99 - HCDEX-143 \n",
-            "70/99 - HCDEX-144 \n",
-            "71/99 - HCDEX-145 \n",
-            "72/99 - HCDEX-146 \n",
-            "73/99 - HCDEX-147 \n",
-            "74/99 - HCDEX-152 \n",
-            "75/99 - HCDEX-156 \n",
-            "76/99 - HCDEX-157 \n",
-            "77/99 - HCDEX-158 \n",
-            "78/99 - HCDEX-167 \n",
-            "79/99 - HCDEX-172 \n",
-            "80/98 - HCDEX-174 \n",
-            "81/98 - HCDEX-275 \n",
-            "82/98 - HCDEX-276 \n",
-            "83/98 - HCDEX-277 \n",
-            "84/98 - HCDEX-278 \n",
-            "85/98 - HCDEX-279 \n",
-            "86/98 - HCDEX-280 \n",
-            "87/98 - HCDEX-281 \n",
-            "88/98 - HCDEX-282 \n",
-            "89/98 - HCDEX-283 \n",
-            "90/98 - HCDEX-284 \n",
-            "91/98 - HCDEX-285 \n",
-            "92/98 - HCDEX-286 \n",
-            "93/98 - HCDEX-287 \n",
-            "94/97 - HCDEX-288 \n",
-            "95/96 - HCDEX-289 \n",
-            "96/95 - HCDEX-290 \n",
-            "97/94 - HCDEX-291 \n",
-            "98/94 - HCDEX-292 \n",
-            "99/93 - HCDEX-293 \n",
-            "100/92 - HCDEX-294 \n",
-            "101/91 - HCDEX-296 \n",
-            "102/90 - HCDEX-297 \n",
+            "1/109 - HCDEX-304 \r\n",
+            "2/109 - HCDEX-303 \r\n",
+            "3/109 - HCDEX-302 \n",
+            "4/109 - HCDEX-301 \n",
+            "5/109 - HCDEX-300 \n",
+            "6/109 - HCDEX-299 \n",
+            "7/109 - HCDEX-298 \n",
+            "8/109 - HCDEX-297 \n",
+            "9/109 - HCDEX-296 \n",
+            "10/109 - HCDEX-294 \n",
+            "11/109 - HCDEX-293 \n",
+            "12/109 - HCDEX-292 \n",
+            "13/109 - HCDEX-291 \n",
+            "14/109 - HCDEX-290 \n",
+            "15/109 - HCDEX-289 \n",
+            "16/109 - HCDEX-288 \n",
+            "17/109 - HCDEX-287 \n",
+            "18/109 - HCDEX-286 \n",
+            "19/109 - HCDEX-285 \n",
+            "20/109 - HCDEX-284 \n",
+            "21/109 - HCDEX-283 \n",
+            "22/109 - HCDEX-282 \n",
+            "23/109 - HCDEX-281 \n",
+            "24/109 - HCDEX-280 \n",
+            "25/109 - HCDEX-279 \n",
+            "26/109 - HCDEX-278 \n",
+            "27/109 - HCDEX-277 \n",
+            "28/109 - HCDEX-276 \n",
+            "29/109 - HCDEX-275 \n",
+            "30/109 - HCDEX-174 \n",
+            "31/109 - HCDEX-172 \n",
+            "32/109 - HCDEX-167 \n",
+            "33/109 - HCDEX-158 \n",
+            "34/109 - HCDEX-157 \n",
+            "35/109 - HCDEX-156 \n",
+            "36/109 - HCDEX-152 \n",
+            "37/109 - HCDEX-147 \n",
+            "38/109 - HCDEX-146 \n",
+            "39/109 - HCDEX-145 \n",
+            "40/109 - HCDEX-144 \n",
+            "41/109 - HCDEX-143 \n",
+            "42/109 - HCDEX-142 \n",
+            "43/109 - HCDEX-141 \n",
+            "44/109 - HCDEX-140 \n",
+            "45/109 - HCDEX-139 \n",
+            "46/109 - HCDEX-138 \n",
+            "47/109 - HCDEX-137 \n",
+            "48/109 - HCDEX-136 \n",
+            "49/109 - HCDEX-135 \n",
+            "50/109 - HCDEX-134 \n",
+            "51/109 - HCDEX-133 \n",
+            "52/109 - HCDEX-132 \n",
+            "53/109 - HCDEX-131 \n",
+            "54/109 - HCDEX-130 \n",
+            "55/109 - HCDEX-129 \n",
+            "56/109 - HCDEX-128 \n",
+            "57/109 - HCDEX-127 \n",
+            "58/109 - HCDEX-125 \n",
+            "59/109 - HCDEX-113 \n",
+            "60/109 - HCDEX-112 \n",
+            "61/109 - HCDEX-111 \n",
+            "62/109 - HCDEX-110 \n",
+            "63/109 - HCDEX-109 \n",
+            "64/109 - HCDEX-108 \n",
+            "65/109 - HCDEX-107 \n",
+            "66/109 - HCDEX-106 \n",
+            "67/109 - HCDEX-105 \n",
+            "68/109 - HCDEX-104 \n",
+            "69/109 - HCDEX-103 \n",
+            "70/109 - HCDEX-102 \n",
+            "71/109 - HCDEX-101 \n",
+            "72/109 - HCDEX-100 \n",
+            "73/109 - HCDEX-99 \n",
+            "74/109 - HCDEX-98 \n",
+            "75/109 - HCDEX-97 \n",
+            "76/109 - HCDEX-96 \n",
+            "77/109 - HCDEX-94 \n",
+            "78/109 - HCDEX-92 \n",
+            "79/109 - HCDEX-91 \n",
+            "80/109 - HCDEX-90 \n",
+            "81/109 - HCDEX-89 \n",
+            "82/109 - HCDEX-87 \n",
+            "83/109 - HCDEX-85 \n",
+            "84/109 - HCDEX-84 \n",
+            "85/109 - HCDEX-81 \n",
+            "86/109 - HCDEX-80 \n",
+            "87/109 - HCDEX-79 \n",
+            "88/109 - HCDEX-78 \n",
+            "89/109 - HCDEX-77 \n",
+            "90/109 - HCDEX-75 \n",
+            "91/109 - HCDEX-74 \n",
+            "92/109 - HCDEX-73 \n",
+            "93/109 - HCDEX-72 \n",
+            "94/109 - HCDEX-71 \n",
+            "95/109 - HCDEX-70 \n",
+            "96/109 - HCDEX-69 \n",
+            "97/109 - HCDEX-68 \n",
+            "98/109 - HCDEX-66 \n",
+            "99/109 - HCDEX-61 \n",
+            "100/109 - HCDEX-60 \n",
+            "101/109 - HCDEX-54 \n",
+            "102/109 - HCDEX-53 \n",
+            "103/109 - HCDEX-24 \n",
+            "104/109 - HCDEX-22 \n",
+            "105/109 - HCDEX-21 \n",
+            "106/109 - HCDEX-20 \n",
+            "107/109 - HCDEX-19 \n",
+            "108/109 - HCDEX-18 \n",
+            "109/109 - HCDEX-17 \n",
             "done saving\n"
           ],
           "name": "stdout"
@@ -327,18 +341,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kVerG-aTAT5h",
+        "id": "SMoCYYkvdI0A",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "49675bf7-8c7d-451c-8d5c-1338c5fc1fe0"
+        "outputId": "d9fcc36c-d828-4430-b6f2-65278ee07d6a"
       },
       "source": [
-        "experiments[46].get_logs()['dur']['lastX']"
+        "experiments[45].get_parameters()['max_epochs']"
       ],
-      "execution_count": 103,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -350,7 +364,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 103
+          "execution_count": 117
         }
       ]
     }
