--- a/notebooks/ResNet18_training.ipynb
+++ b/notebooks/ResNet18_training.ipynb
@@ -297,7 +297,7 @@
         "# CLASSIFIER TRAINING\n",
         "md.train_model(classifier, \n",
         "            train_labels = \"drive/My Drive/dl_project_data/train/train_split_small.csv\", \n",
-        "            test_lables = \"drive/My Drive/dl_project_data/train/test_split_small.csv\", \n",
+        "            test_labels = \"drive/My Drive/dl_project_data/train/test_split_small.csv\", \n",
         "            file_dir = \"train\", \n",
         "            train_transform = transforms.Compose([transforms.ToPILImage(),\n",
         "                                  transforms.Pad(64, padding_mode='reflect'), # 96 + 2*64 = 224\n",
